remove "Default" prefix from internal randomizers